# shanten-dp-rust

./: Cargo.toml  README.md  rustfmt.toml
.devcontainer/: devcontainer.json  download_bench_data.sh
.github/workflows/: ci.yml
benches/: shanten_dp_bench.rs
src/: common.rs  lib.rs  seven_pairs.rs  shanten.rs  standard.rs  thirteen_orphans.rs
tests/: shanten_dp_test.rs
