[package]
name = "shanten-dp"
version = "0.3.1"
edition = "2024"
description = "Rust implementation of the Shanten calculation algorithm using dynamic programming."
license = "MIT"
repository = "https://github.com/tomohxx/shanten-dp-rust"
readme = "README.md"
keywords = ["mahjong", "shanten"]
categories = ["algorithms", "game-development", "no-std"]
rust-version = "1.85"

[dependencies]
bitflags = { version = "2.11.1", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

[[bench]]
name = "shanten_dp_bench"
harness = false

[dev-dependencies]
criterion = "0.7.0"
